fixed modal overlap with marathon

--- a/src/components/VroomVolts/VroomVolts.css
+++ b/src/components/VroomVolts/VroomVolts.css
@@ -147,7 +147,7 @@ body {
 .modal {
     /* display: block;  */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 5; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
